--- a/masterview.ui
+++ b/masterview.ui
@@ -51,7 +51,13 @@
          <property name="minimumSize">
           <size>
            <width>50</width>
-           <height>50</height>
+           <height>60</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>80</height>
           </size>
          </property>
          <property name="font">
@@ -95,7 +101,13 @@ QPushButton:checked {
          <property name="minimumSize">
           <size>
            <width>50</width>
-           <height>50</height>
+           <height>60</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>80</height>
           </size>
          </property>
          <property name="font">
@@ -139,7 +151,13 @@ QPushButton:checked {
          <property name="minimumSize">
           <size>
            <width>50</width>
-           <height>50</height>
+           <height>60</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>80</height>
           </size>
          </property>
          <property name="font">
@@ -157,7 +175,13 @@ QPushButton:checked {
          <property name="minimumSize">
           <size>
            <width>50</width>
-           <height>50</height>
+           <height>60</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>80</height>
           </size>
          </property>
          <property name="font">
@@ -175,7 +199,13 @@ QPushButton:checked {
          <property name="minimumSize">
           <size>
            <width>50</width>
-           <height>50</height>
+           <height>60</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>80</height>
           </size>
          </property>
          <property name="font">
@@ -279,7 +309,7 @@ QPushButton#btExit:hover {
               </widget>
              </item>
              <item>
-              <widget class="QPushButton" name="pushButton_2">
+              <widget class="QPushButton" name="btnBookBorrowed">
                <property name="text">
                 <string>借阅</string>
                </property>
@@ -335,42 +365,60 @@ QPushButton#btExit:hover {
           </layout>
          </widget>
          <widget class="QWidget" name="pageBorrow">
-          <widget class="QPushButton" name="btnReaderDelete_2">
-           <property name="geometry">
-            <rect>
-             <x>330</x>
-             <y>10</y>
-             <width>56</width>
-             <height>18</height>
-            </rect>
-           </property>
-           <property name="text">
-            <string>归还</string>
-           </property>
-          </widget>
-          <widget class="QPushButton" name="btnReaderQuery_2">
-           <property name="geometry">
-            <rect>
-             <x>170</x>
-             <y>10</y>
-             <width>56</width>
-             <height>18</height>
-            </rect>
-           </property>
-           <property name="text">
-            <string>查询记录</string>
-           </property>
-          </widget>
-          <widget class="QLineEdit" name="ReaderSearchlineEdit_2">
-           <property name="geometry">
-            <rect>
-             <x>11</x>
-             <y>11</y>
-             <width>114</width>
-             <height>19</height>
-            </rect>
-           </property>
-          </widget>
+          <layout class="QVBoxLayout" name="verticalLayout_8">
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_11">
+             <item>
+              <widget class="QLineEdit" name="BorrowSearchlineEdit"/>
+             </item>
+             <item>
+              <widget class="QPushButton" name="btnBorrowQuery">
+               <property name="text">
+                <string>查询记录</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="btnBorrowDelete">
+               <property name="text">
+                <string>删除</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="btnBorrowReturn">
+               <property name="text">
+                <string>归还</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </item>
+           <item>
+            <widget class="QTableView" name="BorrowtableView"/>
+           </item>
+          </layout>
+         </widget>
+         <widget class="QWidget" name="page_10">
+          <layout class="QVBoxLayout" name="verticalLayout_9">
+           <item>
+            <widget class="QLabel" name="label">
+             <property name="text">
+              <string>借阅数据统计结果如下：</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QTableView" name="ReporttableView"/>
+           </item>
+           <item>
+            <widget class="QPushButton" name="btnOutdata">
+             <property name="text">
+              <string>导出数据</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
          </widget>
         </widget>
        </item>
