--- a/masterview.ui
+++ b/masterview.ui
@@ -40,7 +40,7 @@
       <property name="styleSheet">
        <string notr="true">QWidget#leftNavWidget {
     background-color: white;
-    border: 2px solid black;  /* 红色边框 */
+    border: 2px solid green;  /* 红色边框 */
     border-radius: 8px;         /* 圆角 */
     padding: 0px;
 }</string>
@@ -250,6 +250,14 @@ QPushButton#btExit:hover {
         <height>0</height>
        </size>
       </property>
+      <property name="styleSheet">
+       <string notr="true">QWidget#rightContentWidget {
+    background-color: white;
+    border: 2px solid green;  /* 红色边框 */
+    border-radius: 8px;         /* 圆角 */
+    padding: 0px;
+}</string>
+      </property>
       <layout class="QHBoxLayout" name="horizontalLayout_6">
        <item>
         <widget class="QStackedWidget" name="stackedWidget">
@@ -261,7 +269,7 @@ QPushButton#btExit:hover {
 }</string>
          </property>
          <property name="currentIndex">
-          <number>0</number>
+          <number>2</number>
          </property>
          <widget class="QWidget" name="pageBooks">
           <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -400,18 +408,66 @@ QPushButton#btExit:hover {
           </layout>
          </widget>
          <widget class="QWidget" name="page_10">
-          <layout class="QVBoxLayout" name="verticalLayout_9">
-           <item>
-            <widget class="QLabel" name="label">
+          <layout class="QGridLayout" name="gridLayout_2">
+           <item row="0" column="0">
+            <widget class="QLabel" name="labelData">
              <property name="text">
               <string>借阅数据统计结果如下：</string>
              </property>
             </widget>
            </item>
-           <item>
-            <widget class="QTableView" name="ReporttableView"/>
+           <item row="1" column="0">
+            <layout class="QGridLayout" name="gridLayout">
+             <item row="0" column="0">
+              <widget class="QLabel" name="labelMostBorrowed">
+               <property name="text">
+                <string>借阅次数最多的图书：</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="1">
+              <widget class="QLineEdit" name="lineEditMostBorrowed"/>
+             </item>
+             <item row="1" column="0">
+              <widget class="QLabel" name="labelLoseBorrowed">
+               <property name="text">
+                <string>借阅次数最少的图书：</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="1">
+              <widget class="QLineEdit" name="lineEditLoseBorrowed"/>
+             </item>
+             <item row="2" column="0">
+              <widget class="QLabel" name="labelMBorrowedReader">
+               <property name="text">
+                <string>借书次数最多的读者：</string>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="1">
+              <widget class="QLineEdit" name="lineEditMBorrowedReader"/>
+             </item>
+             <item row="3" column="0">
+              <widget class="QLabel" name="labelLBorrowedReader">
+               <property name="text">
+                <string>借书次数最少的读者：</string>
+               </property>
+              </widget>
+             </item>
+             <item row="3" column="1">
+              <widget class="QLineEdit" name="lineEditLBorrowedReader"/>
+             </item>
+            </layout>
            </item>
-           <item>
+           <item row="2" column="0">
+            <widget class="QLabel" name="label_4">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="0">
             <widget class="QPushButton" name="btnOutdata">
              <property name="text">
               <string>导出数据</string>
